--- a/Jarvis/scripts/docker/traefik/configs/rules/chain-auth.yml
+++ b/Jarvis/scripts/docker/traefik/configs/rules/chain-auth.yml
@@ -1,8 +1,9 @@
 http:
   middlewares:
-    chain-basic-auth:
+    chain-auth:
       chain:
-        middlewares:      
+        middlewares:
           - middlewares-rate-limit
           - middlewares-secure-headers
-          - middlewares-basic-auth
+          - middlewares-compress
+          - middlewares-auth
