--- a/Jarvis/scripts/docker/traefik/compose.yml
+++ b/Jarvis/scripts/docker/traefik/compose.yml
@@ -24,10 +24,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_CONTAINER_NAME}.${JARVIS_DOMAIN}`)
-      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.service=${JARVIS_CONTAINER_NAME}
-      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
-      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
-      - traefik.http.services.${JARVIS_CONTAINER_NAME}.loadbalancer.server.port=80
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.service=api@internal
     extra_hosts: 
       host.docker.internal: host-gateway
     networks:
