--- a/Jarvis/scripts/docker/code/compose.yml
+++ b/Jarvis/scripts/docker/code/compose.yml
@@ -1,17 +1,17 @@
 name: ${JARVIS_CONTAINER_NAME}
 services:
-  codeserver:
+  code:
     container_name: ${JARVIS_CONTAINER_NAME}
     image: codercom/code-server
     restart: unless-stopped
     tty: true
     stdin_open: true
+    command: --auth none
     environment:
       TZ: ${JARVIS_TZ}
       PUID: ${JARVIS_PUID}
       PGID: ${JARVIS_PGID}
       DOCKER_USER: ${USER}
-      PASSWORD: ${JARVIS_ADMIN_PASSWORD}
       PROXY_DOMAIN: ${JARVIS_CONTAINER_NAME}.${JARVIS_DOMAIN}
     ports:
       - 8888:8080
@@ -22,14 +22,15 @@ services:
       - ${HOME}/.gitconfig:/home/coder/.gitconfig
       - ${HOME}/.gitignore_global:/home/coder/.gitignore_global
       - ${HOME}/.ssh:/home/coder/.ssh
-      - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}:/home/coder/.config/code-server
-      - ${JARVIS_CONFIG_ROOT}:/home/coder/AppConfigs
+      - ${JARVIS_CONFIGS}/${JARVIS_CONTAINER_NAME}:/home/coder/.config/code-server
+      - ${JARVIS_CONFIGS}:/home/coder/AppConfigs
     labels:
       - traefik.enable=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_CONTAINER_NAME}.${JARVIS_DOMAIN}`)
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.service=${JARVIS_CONTAINER_NAME}
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.middlewares=chain-auth@file
       - traefik.http.services.${JARVIS_CONTAINER_NAME}.loadbalancer.server.port=8080
     networks:
       - ${JARVIS_PROXY_DOCKER_NETWORK}
