--- a/Jarvis/scripts/docker/traefik/configs/rules/app-home.yml
+++ b/Jarvis/scripts/docker/traefik/configs/rules/app-home.yml
@@ -8,6 +8,8 @@ http:
       tls:
         certResolver: ${JARVIS_CERT_RESOLVER}
         options: tls-opts@file
+      middlewares:
+        - chain-auth@file
 
   services:
     home:
