--- a/Jarvis/scripts/docker/portainer/compose.yml
+++ b/Jarvis/scripts/docker/portainer/compose.yml
@@ -10,7 +10,7 @@ services:
       - 9000:9000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}:/data
+      - ${JARVIS_CONFIGS}/${JARVIS_CONTAINER_NAME}:/data
     labels:
       - traefik.enable=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_CONTAINER_NAME}.${JARVIS_DOMAIN}`)
