--- a/Jarvis/scripts/docker/redis/compose.yml
+++ b/Jarvis/scripts/docker/redis/compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - 6379:6379
     volumes:
-      - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/data:/data
+      - ${JARVIS_CONFIGS}/${JARVIS_CONTAINER_NAME}/data:/data
     networks:
       - ${JARVIS_PROXY_DOCKER_NETWORK}
 
