⚡️ New restore service

--- a/Jarvis/scripts/docker/cloudflared/compose.yml
+++ b/Jarvis/scripts/docker/cloudflared/compose.yml
@@ -5,6 +5,7 @@ services:
     image: cloudflare/cloudflared
     restart: unless-stopped
     command: tunnel --no-autoupdate run
+    user: ${JARVIS_PUID}:${JARVIS_PGID}
     security_opt:
       - no-new-privileges:true
     environment:
