--- a/Jarvis/scripts/docker/postgres/compose.yml
+++ b/Jarvis/scripts/docker/postgres/compose.yml
@@ -5,6 +5,7 @@ services:
     image: postgres
     shm_size: 128mb
     restart: unless-stopped
+    user: ${JARVIS_PUID}:${JARVIS_PGID}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${JARVIS_ADMIN_USERNAME}"]
       start_period: 20s
