--- a/Jarvis/scripts/docker/redis/compose.yml
+++ b/Jarvis/scripts/docker/redis/compose.yml
@@ -5,6 +5,7 @@ services:
     image: redis
     command: --save 60 1 --loglevel warning
     restart: unless-stopped
+    user: ${JARVIS_PUID}:${JARVIS_PGID}
     healthcheck:
       test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
       start_period: 20s
