✨ New ansible for update and automount

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,10 @@
 	"editor.detectIndentation": false,
     "search.exclude": {
         "**/archive": true,
-    }
+	},
+	"cSpell.words": [
+		"Automount",
+		"ntfs",
+		"wdhdd"
+	]
 }
