--- a/ProxmoxAnsible/tasks/env.yml
+++ b/ProxmoxAnsible/tasks/env.yml
@@ -11,76 +11,73 @@
       doppler_info:
           project: jarvis
           config: prd
+      doppler_required_secrets:
+          - JARVIS_ADMIN_EMAIL
+          - JARVIS_ADMIN_NAME
+          - JARVIS_ADMIN_PASSWORD
+          - JARVIS_AUTH_GITHUB_CLIENT_ID
+          - JARVIS_AUTH_GITHUB_CLIENT_SECRET
+          - JARVIS_AUTH_GOOGLE_APP_PASSWORD
+          - JARVIS_AUTH_GOOGLE_CLIENT_ID
+          - JARVIS_AUTH_GOOGLE_CLIENT_SECRET
+          - JARVIS_AUTH_SESSION_KEY
+          - JARVIS_AUTH_X_CLIENT_ID
+          - JARVIS_AUTH_X_CLIENT_SECRET
+          - JARVIS_CF_DNS_API_TOKEN
+          - JARVIS_CF_TUNNEL_TOKEN
+          - JARVIS_DOMAIN
+          - JARVIS_GITHUB_TOKEN_SSH
+          - JARVIS_POSTGRES_PASSWORD
+      local_config:
+          JARVIS_CONFIGS_DIR: '/root/.jarvis/configs'
+          JARVIS_NETWORK_PREFIX: '192.168.68'
+          JARVIS_HOST: '{{ env.JARVIS_NETWORK_PREFIX }}.200'
+          JARVIS_GATEWAY: '{{ env.JARVIS_NETWORK_PREFIX }}.1'
+          JARVIS_DNS_SERVERS: ['8.8.8.8', '8.8.4.4']
+          JARVIS_TZ: 'Asia/Kolkata'
+          JARVIS_CERT_RESOLVER: 'letsencrypt'
+
   block:
       - name: Install Doppler (MacOS)
         homebrew:
             name: dopplerhq/cli/doppler
             state: present
+        when: ansible_os_family == 'Darwin'
 
-      - name: Ensure Doppler Project Configured (Retry Loop)
+      - name: Ensure Doppler Project Configured
         shell: |
-            if doppler setup --project {{ doppler_info.project }} --config {{ doppler_info.config }} > /dev/null 2>&1; then
-                exit 0
+            if ! doppler setup --project {{ doppler_info.project }} --config {{ doppler_info.config }} --no-interactive > /dev/null 2>&1; then
+                echo "Doppler not configured or login expired."
+                echo "Please log in to Doppler to access '{{ doppler_info.project }}' project."
+                yes | doppler login > /dev/null
             fi
-
-            USER_INFO=$(doppler me 2>&1)
-            echo "----------------------------------------------------------------"
-            echo "ERROR: Project '{{ doppler_info.project }}' not found with config '{{ doppler_info.config }}'."
-            echo "Current User Info:"
-            echo "$USER_INFO"
-            echo "----------------------------------------------------------------"
-            echo "Please login with the account that has access to '{{ doppler_info.project }}' project"
-
-            yes | doppler login > /dev/null
-            exit 1
         register: doppler_setup_result
         until: doppler_setup_result.rc == 0
-        retries: 10
-        delay: 1
+        retries: 5
+        delay: 2
         changed_when: false
 
       - name: Download Secrets
         command: doppler secrets download --no-file --format json
         register: secrets_output
         changed_when: false
+        no_log: true
 
-      - name: Parse Secrets
+      - name: Parse and Verify Secrets
         set_fact:
             doppler_secrets: '{{ secrets_output.stdout | from_json }}'
+        no_log: true
 
-      - name: Define Required Secrets
-        set_fact:
-            required_secrets:
-                - JARVIS_ADMIN_EMAIL
-                - JARVIS_ADMIN_NAME
-                - JARVIS_ADMIN_PASSWORD
-                - JARVIS_AUTH_GITHUB_CLIENT_ID
-                - JARVIS_AUTH_GITHUB_CLIENT_SECRET
-                - JARVIS_AUTH_GOOGLE_APP_PASSWORD
-                - JARVIS_AUTH_GOOGLE_CLIENT_ID
-                - JARVIS_AUTH_GOOGLE_CLIENT_SECRET
-                - JARVIS_AUTH_SESSION_KEY
-                - JARVIS_AUTH_X_CLIENT_ID
-                - JARVIS_AUTH_X_CLIENT_SECRET
-                - JARVIS_CF_DNS_API_TOKEN
-                - JARVIS_CF_TUNNEL_TOKEN
-                - JARVIS_DOMAIN
-                - JARVIS_GITHUB_TOKEN_SSH
-                - JARVIS_POSTGRES_PASSWORD
-                - JARVIS_HOST_IP
-
-      - name: Validate Secrets
+      - name: Validate Required Secrets
         fail:
-            msg: 'Missing secret: {{ item }}. Please check your Doppler project.'
-        loop: '{{ required_secrets }}'
+            msg: 'Missing required secret: {{ item }}'
+        loop: '{{ doppler_required_secrets }}'
         when: item not in doppler_secrets
 
       - name: Construct Global Environment
         set_fact:
             env: '{{ doppler_secrets | combine(local_config) }}'
-        vars:
-            local_config:
-                configs_dir: '/root/.jarvis/configs'
+        no_log: true
 
       - name: Success Message
         debug:
