--- a/ProxmoxAnsible/tasks/instances/home_vm/index.yml
+++ b/ProxmoxAnsible/tasks/instances/home_vm/index.yml
@@ -15,6 +15,8 @@
           cores: 2
           storage: local-lvm
           bridge: vmbr0
+          ip: '{{ env.JARVIS_NETWORK_PREFIX }}.{{ vm.id }}/24'
+          gateway: '{{ env.JARVIS_GATEWAY }}'
   block:
       - name: Collect all VMs
         community.general.proxmox_kvm_info:
@@ -60,6 +62,11 @@
                   machine: q35
                   net:
                       net0: 'virtio=02:6e:c2:4a:00:29,bridge={{ vm.bridge }}'
+                  ide:
+                      ide2: '{{ vm.storage }}:cloudinit'
+                  ipconfig0: 'ip={{ vm.ip }},gw={{ vm.gateway }}'
+                  nameservers: '{{ env.JARVIS_DNS_SERVERS }}'
+                  searchdomain: 'local'
                   onboot: true
                   ostype: l26
                   agent: 1
@@ -75,7 +82,7 @@
               command: 'qm importdisk {{ vm.id }} /var/lib/vz/template/iso/haos_ova-{{ haos_version }}.qcow2 {{ vm.storage }}'
 
             - name: Attach Disk
-              command: 'qm set {{ vm.id }} --scsi0 {{ vm.storage }}:vm-{{ vm.id }}-disk-1,ssd=1,discard=on,size=32G --boot order=scsi0'
+              command: 'qm set {{ vm.id }} --scsi0 {{ vm.storage }}:vm-{{ vm.id }}-disk-0,ssd=1,discard=on,size=32G --boot order=scsi0'
 
             - name: Start VM
               community.general.proxmox_kvm:
